e2e/test/lb-fw-delete-acl/create-pods-services.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lb-fw-delete-acl
  name: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lb-fw-delete-acl
  template:
    metadata:
      labels:
        app: lb-fw-delete-acl
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - simple-lb
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - image: appscode/test-server:2.3
        name: test
        ports:
        - name: http-1
          containerPort: 8080
          protocol: TCP
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
---
apiVersion: v1
kind: Service
metadata:
  name: svc-test
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-firewall-acl: |
      {
        "denyList": {
            "ipv4": ["8.8.8.8/32",
                    "9.9.9.9/32",
                    "7.7.7.7/32"]
        }
      }
  labels:
    app: lb-fw-delete-acl
spec:
  type: LoadBalancer
  selector:
    app: lb-fw-delete-acl
  ports:
    - name: http-1
      protocol: TCP
      port: 80
      targetPort: 8080
  sessionAffinity: None
